feat: add creating new product (admin)
